--- a/aboutmehtml.html
+++ b/aboutmehtml.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link type="text/css" rel="stylesheet" href ="newaboutmecss.css"/>
+<link type="text/css" rel="stylesheet" href ="aboutmecss.css"/>
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
