--- a/aboutmehtml.html
+++ b/aboutmehtml.html
@@ -18,6 +18,7 @@
         <li><a class="other" href="#other">OTHER </a></li>
       </ul>
 <div class="background">
+
   <div class="space"></div>
       <div class="boxed">
           <div class="boxwords">
@@ -66,5 +67,50 @@
     </table>
 <div class="space4"></div>
 
+
+<div class="nextthree">
+
+<table class="tablemap" style="display: inline-block;">
+  <thead>
+      <tr>
+          <th class="space2">-WHERE I WISH I WAS-</th>
+
+      </tr>
+  </thead>
+  <tr>
+    <td><div id="googleMap" style="width:300px;height:200px;"></div>
+
+    <script>
+    function myMap() {
+    var mapProp= {
+        center:new google.maps.LatLng(51.509865,-0.118092),
+        zoom:10,
+    };
+    var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+    }
+    </script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC26wJI2bmUgIyXJrz3_a8P2Pkbjvcf7eo&callback=myMap"></script>
+  </td>
+  </tr>
+</table>
+
+<table class="table4" style="display: inline-block;">
+  <thead>
+      <tr>
+          <th class="space2">-ABOUT THIS-</th>
+
+      </tr>
+  </thead>
+  <tr>
+    <td><div class="aboutthis">
+     <p class="space2">This is a site that I am currently building during the summer of 2017 while in the Girls Who Code Summer Immersion Program.
+        This is my first website so I hope that you enjoy. If you have any questions or comments you can find my contact information
+      on the ABOUT ME tab</p></div>
+  </td>
+  </tr>
+</table>
+
+</div>
 </body>
 </center>
